apps/samples/grav-demo/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grav-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
  - secretName: grav-tls
    hosts:
    - grav.omni.cedille.club
  rules:
  - host: grav.omni.cedille.club
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grav
            port:
              number: 80
